--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,20 @@
-@import './base/variables ';
+@import './utils/variables';
+@import './base/common';
+@import './utils/hidden';
+@import './components/header';
+@import './components/hero';
+@import './components/features';
+@import './components/work-section';
+@import './components/team-section';
+@import './components/regular-section';
+@import './components/footer';
+@import './components/portfolio';
+@import './components/email-footer';
+@import './components/.modal';
+
+
+
+
+
+
+
