--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,54 +1,8 @@
-.logo{ 
-    margin-right:93px ;
-    font-family: var(--secondary-font-family);
-    font-weight:700;
-    font-size: 26px;
-    line-height: 1.19;
-    color:var(--secondary-text-color);
-    }
-    
-    .logo-color{
-      color: var(--accent-color);
-    }
-    
-    
-    .site-list{
-    display: flex;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--secondary-text-color);
-    
-    }
-    
-    
-    .nav-item:not(:last-child){
-      margin-right: 50px;
-    }
-  
-    .site-link{
-      position: relative;
-      font-family: Roboto;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 1.14;
-      letter-spacing: 0.02em;
-      color:var(--secondary-text-color );
-      transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-      &:hover,
-      &:focus{
-        color: var(--accent-color);
-      }
-
-      & .current{
-        color:var(--accent-color) ;
-      }
-      
-    }
     
+   
     
-    .contact-link{
+    .contact__link{
     display: inline-flex;
     font-weight: 500;
     font-size: 14px;
@@ -64,41 +18,35 @@
     }
 
       
-    &:hover .svg-mail{
+    &:hover .contact__svg_mail{
       fill: var(--accent-color);
       transition-duration: 250ms;
       } 
       
-    &:focus .svg-mail{
+    &:focus .contact__svg_mail{
       fill: var(--accent-color);
         } 
       
     }
     
-    .contact-item:not(:last-child){
+    .contact__item:not(:last-child){
     margin-right: 50px;
     }
     
-    .contact-item:hover,
-    .contact-item:focus {
+    .contact__item:hover,
+    .contact__item:focus {
       color: var(--accent-color);
       
     }
+  
     
-    .site-nav{
-      display: flex;
-      align-items: center;
-     
-    
-    }
-    
-     .contact-list{
+     .contact__list{
       display: flex;
       align-items: center;
       margin-left: auto;
      }
     
-    .header-container{
+    .header__container{
       display: flex;
       align-items: center;
       
@@ -110,23 +58,12 @@
       padding-bottom:25px;
     }
     
-    .svg-mail{
+    .contact__svg_mail{
       width: 16px;
       height: 16px;
       margin-right: 10px;
       fill: var(--primary-text-color);
     }
+   
     
-    .after-link::after{
-      content: "";
-      display: block;
-      width:100% ;
-      height:4px ;
-      background: #2196F3;
-      border-radius: 2px;
-      position: absolute;
-      top: 46px;
-      transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-    }
     
