--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -13,7 +13,7 @@
     text-align: center;
     }
     
-    .hero-title{
+    .hero__title{
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -22,7 +22,7 @@
     color: var(--primary-bg-color);
     }
     
-    .button{
+    .hero__button{
     padding-left:32px ;
     padding-right:32px ;
     padding-top:10px ;
